<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">History</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_history">History</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="line">line</string>
    <string name="Result">You win</string>
    <string name="computerName">Computer</string>
    <string name="computerImage">computerImage</string>
    <string name="textVS">VS</string>
    <string name="imageUser">UserImage</string>
    <string name="textUser">User</string>

    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>
    <string name="delete">delete</string>
    <string name="vr_17_april_2020">vr 17 april 2020</string>
    <string name="computer_wins">Computer Wins</string>
    <string name="your_all_time_statistics">Your all time statistics</string>
    <string name="stats">Win: %d, Draw: %d, Lose: %d</string>
</resources>
