<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/computer_wins"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vr_17_april_2020"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/textVS"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/humanChoice"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/computerChoice"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <ImageView
        android:id="@+id/computerChoice"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:layout_marginStart="40dp"
        android:background="#056E64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/humanChoice"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:layout_marginEnd="40dp"
        android:background="#056E64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/computerName"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerChoice" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/textUser"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/tvComputer"
        app:layout_constraintTop_toBottomOf="@+id/humanChoice" />


</androidx.constraintlayout.widget.ConstraintLayout>